# LASER-fluxograma-e-robos

./: .gitignore  ActionBlock.cpp  ActionBlock.hpp  Block.cpp  Block.hpp  ColorSensorBlock.hpp  ConditionalBlock.cpp  ConditionalBlock.hpp  EndBlock.cpp  EndBlock.hpp  Interface.cpp  Interface.hpp  LabirintoBasico10.ttt  LabirintoBasico2.ttt  LabirintoBasico5.ttt  LabirintoBasico7.ttt  LabirintoBasico9.ttt  LoopBlock.cpp  LoopBlock.hpp  MergeBlock.cpp  MergeBlock.hpp  ProgrammingBlock.cpp  ProgrammingBlock.hpp  README.md  StartBlock.cpp  StartBlock.hpp  fluxprog  main.cpp  makefile
Códigos dos blocos de sensores - antigo/: BlackSensorBlock.cpp  BlackSensorBlock.hpp  Block.hpp  ColorSensorBlock.cpp  Communication.cpp  Interface.cpp  Interface.hpp  SensorBlock.cpp  SensorBlock.hpp  UltrasonicSensorBlock.cpp  UltrasonicSensorBlock.hpp
Documentation/: Fluxprog_backend.asta  Fluxprog_backend_class_diagram.png.bak  Robo0.asta  UML diagram.asta
Documentation/robo0_hardware/: robo0.s#2  robo0.s#5  robo0.s#6  robo0.s#8  robo0.sch
FluxProg/: ActionBlock.cpp  ActionBlock.hpp  Block.cpp  Block.hpp  Communication.cpp  Communication.hpp  ConditionalBlock.cpp  ConditionalBlock.hpp  EndBlock.cpp  EndBlock.hpp  FluxProg.cpp  FluxProg.hpp  Interface.cpp  Interface.hpp  LoopBlock.cpp  LoopBlock.hpp  MergeBlock.cpp  MergeBlock.hpp  ProgrammingBlock.hpp  StartBlock.cpp  StartBlock.hpp  fluxProgCte.h  flux_prog.sh  fluxprog  main antigo.cpp  makefile  tentativa de desenhar flecha
FluxProg errado/: CMakeLists.txt  README.md
FluxProg errado/include/: Communication.hpp  FluxProg.hpp  Interface.hpp
FluxProg errado/source/: Block.cpp  CMakeLists.txt  Communication.cpp  ConditionalBlock.cpp  EndBlock.cpp  FluxProg.cpp  Interface.cpp  MergeBlock.cpp
FluxProg/include/: Block.hpp  FluxProg.hpp  Interface.hpp  LoadFile.hpp  LoopBlock.hpp  SaveFile.hpp  fluxProgCte.h
FluxProg/source/: Block.cpp  CMakeLists.txt  Communication.cpp  ConditionalBlock.cpp  FluxProg.cpp  Interface.cpp  LoadFile.cpp  LoopBlock.cpp  MergeBlock.cpp  SaveFile.cpp
FluxProgBackend/: CMakeLists.txt  Communication.cpp  Communication.hpp  FluxProgBackend.cpp  FluxProgBackend.hpp  VirtualRobot.cpp  VirtualRobot.hpp  fluxProgBackendCte.h
FluxProgBackend/include/: VirtualRobot.hpp
FluxProgBackend/source/: Communication.cpp  FluxProgBackend.cpp  PhysicalRobot.cpp  VirtualRobot.cpp  main.cpp
Físico/: Robot.cpp
Físico/Modelagem_peças/: Suporte_Encolder.stl  Suporte_Infravermelhos.stl  Torre_encaxie_tampa.stl  andar_movel.stl
Físico/robo0/: BlackTapeSensor.cpp  BlackTapeSensor.hpp  Bluetooth.cpp  Bluetooth.hpp  ColorSensor.cpp  ColorSensor.hpp  Motor.cpp  Motor.hpp  MyUltrasonic.cpp  MyUltrasonic.hpp  Principal.cpp  Principal.hpp  Robot.cpp  Robot.hpp  robo0.ino  robotCte.h  robotCte.hpp
Físico/robo0/Documentation/: Robo0.asta
Linux/FluxProg/: CMakeLists.txt  flux_prog.sh
Linux/FluxProg/include/: Communication.hpp  FluxProg.hpp  Interface.hpp  fluxProgCte.h
Linux/FluxProg/source/: ActionBlock.cpp  Communication.cpp  FluxProg.cpp  Interface.cpp  ProgrammingBlock.cpp  SaveFile.cpp
Linux/FluxProgBackend/: CMakeLists.txt
Linux/FluxProgBackend/include/: Communication.hpp  Robot.hpp  VirtualRobot.hpp  fluxProgBackendCte.h
Linux/FluxProgBackend/source/: CMakeLists.txt  Communication.cpp  FluxProgBackend.cpp  PhysicalRobot.cpp  Robot.cpp  VirtualRobot.cpp
Linux/scenes/: LabirintoBasico.ttt  LabirintoBasico1.ttt  LabirintoBasico10.ttt  LabirintoBasico2.ttt  LabirintoBasico3.ttt  LabirintoBasico4.ttt  LabirintoBasico5.ttt  LabirintoBasico6.ttt  LabirintoBasico7.ttt  LabirintoBasico8.ttt  LabirintoBasico9.ttt
Scenes/: LabirintoBasico4.ttt
Simulador/ProjetoRemoteApi/: main.cpp
Simulador/ProjetoRemoteApi/olders versions/: funcionando com coisas desnecessarias.cpp  main.cpp
Simulador/TesteBoostMemory/: CMakeLists.txt  main.cpp
Simulador/scenes to dr fabro/: scene to dr fabro2.ttt
Windows/FluxProgBackend/: FluxProgBackend.cbp  FluxProgBackend.depend  FluxProgBackend.layout
Windows/FluxProgBackend/include/: CMakeLists.txt  Robot.hpp
Windows/FluxProgBackend/source/: VirtualRobot.cpp
Windows/Simulador/ProjetoRemoteApi/: CMakeLists.txt  main.cpp
Windows/Simulador/ProjetoRemoteApi/include/: luaFunctionData.h  luaFunctionDataItem.h  scriptFunctionData.h  scriptFunctionDataItem.h  socketInConnection.h  socketOutConnection.h
Windows/Simulador/ProjetoRemoteApi/include/stack/: stackArray.h  stackBool.h  stackMap.h  stackNull.h  stackNumber.h  stackObject.h  stackString.h
Windows/Simulador/ProjetoRemoteApi/olders versions/: func_nbate_lesensores.cpp  tent_corrigir_reta_gps.cpp  virandoPorAngulo.cpp
Windows/Simulador/TesteBoostMemory/: CMakeLists.txt  main.cpp
Windows/Simulador/scenes to dr fabro/: scene to dr fabro3.ttt
Windows/executables/: backup.fp
Windows/executables/images/: botao_opcao.xcf  pausar.xcf  rodar.xcf
Windows/fluxprog/: backup.fp  fluxprog.cbp  fluxprog.depend  fluxprog.h  fluxprog.layout  main.cpp
Windows/fluxprog/images/: arte.xcf  block4.xcf  fita.xcf  logic_false.xcf  logic_true.xcf  (+1 more)
Windows/remoteAPI/: main.cpp  remoteAPI.depend  remoteAPI.layout
fluxprog/: LabirintoBasico.ttt  scene to dr fabro.ttt
fluxprog/FluxProgBackend/: CMakeLists.txt  Communication.cpp  Communication.hpp  PhysicalRobot.cpp  PhysicalRobot.hpp  Principal.cpp  Principal.hpp  Robot.cpp  Robot.hpp  VirtualRobot.cpp  VirtualRobot.hpp  fluxProgBackendCte.h  main.cpp
fluxprog/ProjetoRemoteApi/: CMakeLists.txt  bubbleRob.ttt  main.cpp
fluxprog/fluxppprog5/: .fp  CMakeLists.txt  backup.fp  coisas a fazer  fluxprog  fluxprog.cpp  fluxprog.h  main.cpp  main.ii  main.s  makefile  teste1.fp
fluxprog/fluxppprog5/images/: block2.xcf  combinaтФЬ╨╖тФЬтХбes.xcf  miniatura_acao.xcf  miniatura_decisao.xcf  miniatura_inicio.xcf
fluxprog/scenes to dr fabro/: Robo_v1..ttt  scene to dr fabro.ttt
fluxprog_v2/: fluxprog_v2.cbp  fluxprog_v2.layout  main.cpp
fluxprogv2/: main.cpp
images/: VREP.xcf
scenes/: LabirintoBasico5.ttt  LabirintoBasico6.ttt  LabirintoBasico7.ttt  LabirintoBasico8.ttt  LabirintoBasico9.ttt
(+51 files in other folders)
